--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/mdb-ui-kit@3.6.0/dist/mdb.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/perfect-scrollbar@1.5.2/dist/perfect-scrollbar.min.js"></script>
+
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +42,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
+        <script>
+          const element = document.querySelector('.scrollx');
+          new PerfectScrollbar(element);
+        </script>
+
   </body>
+  
 </html>
